# lua-demo

./: CMakeLists.txt  README.md  main.c  main2.c  main2.h  module.c  readelf_-a_after_strip-s.txt  readelf_-a_before_strip-s.txt
lua/: luaconf.h
